==================
JellyRoll Change Log
==================

Version 0.9.5,
--------------------------
* Status admin, list display notify and display
* Update email images to be background-images

Version 0.9.4, 3 Dec, 2016
--------------------------
 * Add order status emails
 * Add html emails
 * Use https://github.com/leemunroe/responsive-html-email-template as a basis for HTML emails


Version 0.9.3,
------------------------------
* Fix caching of translations
* Fix pycrypto requirement


Version 0.9.2, 22 August, 2016
------------------------------
 * Improve filtering of product list admin
 * Make stock quantities editable in the product list admin
 * Add missing requirements: requests, httmock
 * Make "six" fulfilment API test portable


Version 0.9.1, 15 August, 2016
---------------------------
 * Add CarrierTranslationFactory to CarrierFactory to fix issue with debugging tests


Version 0.9, 15 August, 2016
---------------------------
 * A sudden and unexpected return to version numbers, changelogs and
   good branching practices.
 * Add shipping estimates (to tieredweightzone)
 * Make optional apps required
 * Refactor tests (still more to do)
 * Remove thumbnail app


Version 0.8, November 25, 2008
-----------------------------
 * Add USPS shipping module
 * Converted to using newforms admin
 * Made country validation of post code and territories/states more robust
 * Added Protx payment support
 * New config setting to hide translation fields
 * Refactored payment code to be more modular
 * Change a time stamp field name for Oracle compatability
 * Added support for brands
 * New shuffle filter
 * Multi-site support
 * Added Italian & Hebrew translation
 * Migrated to new django comments functionality. Remove the need for comment_utils
 * Move admin to use nfa and rest of Satchmo now compatible with django 1.0
 * Removed all standalone satchmo settings from settings.py and local_settings.py, moving them